--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About
-description: Learn more about TechSight and our mission to provide expert technical guidance for B2B SaaS companies.
+description: Learn more about TechSight and our mission to help B2B SaaS companies with AI and Security.
 ---
 
 <div class="site-section-cover">
@@ -9,7 +9,7 @@ description: Learn more about TechSight and our mission to provide expert techni
     <div class="row align-items-center text-left justify-content-center">
       <div class="col-lg-7 mr-auto">
         <h1 class="text-black mb-4">About TechSight</h1>
-        <p class="lead text-muted">TechSight provides expert Fractional CTO and Technical Due Diligence services for B2B SaaS companies.</p>
+        <p class="lead text-muted">TechSight helps B2B SaaS companies navigate the technical complexities of AI adoption and security compliance.</p>
       </div>
     </div>
   </div>
@@ -29,8 +29,8 @@ description: Learn more about TechSight and our mission to provide expert techni
         <h5 class="heading-caps text-muted">Mission</h5>
       </div>
       <div class="col-md-8">
-        <h2 class="font-weight-bold">Turning Insights into Action</h2>
-        <p>We specialize in providing expert guidance and solutions that help you make informed decisions during critical business transitions.</p>
+        <h2 class="font-weight-bold">From Roadmap to Reality</h2>
+        <p>Our mission is to help engineering and product leaders make pragmatic technical decisions. We don't just advise; we provide the technical ground truth you need to build AI features that work and security postures that scale.</p>
       </div>
     </div>
   </div>
