--- a/index.html
+++ b/index.html
@@ -26,30 +26,19 @@ layout: default
         <h5 class="heading-caps text-muted">Services</h5>
       </div>
       <div class="col-md-8">
-        <h2 class="font-weight-bold">Providing Deep Technical Due Diligence for B2B SaaS Companies</h2>
-        <p>We specialize in providing expert guidance and solutions that help you make informed decisions during critical business transitions. Our range of services is designed to deliver actionable insights and optimize your technology investments.</p>
+        <h2 class="font-weight-bold">Practical AI & Security Implementation for B2B SaaS</h2>
+        <p>We help B2B SaaS companies bridge the gap between strategy and execution. Whether you need to assess your data for AI, ship a production RAG chatbot, or get technically ready for SOC 2, we provide the technical roadmap and hands-on implementation to get you there.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="service-29191 d-flex">
           <span class="wrap-icon mb-4 d-block">
-            <span class="et-toolbox"></span>
-          </span>
-          <div>
-            <h3 class="mb-3">M&A Technical Due Diligence</h3>
-            <p>We conduct comprehensive technical due diligence for mergers and acquisitions, ensuring that you understand the true value and risks of technology assets. Our in-depth assessments cover code quality, architecture, scalability, and more, helping you make informed investment decisions.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-29191 d-flex">
-          <span class="wrap-icon mb-4 d-block">
             <span class="et-genius"></span>
           </span>
           <div>
-            <h3 class="mb-3">Software Consulting</h3>
-            <p>Our consulting services focus on optimizing your software development processes and architecture. Whether you’re building a new product or enhancing an existing one, we provide the expertise needed to streamline operations, reduce costs, and accelerate time to market.</p>
+            <h3 class="mb-3">AI Readiness Assessment</h3>
+            <p>Know if you’re ready to build AI features before you start. We assess your data quality, infrastructure, and use cases to provide a prioritized roadmap, cost model, and build vs. buy recommendations in just 2 weeks.</p>
           </div>
         </div>
       </div>
@@ -59,8 +48,19 @@ layout: default
             <span class="et-chat"></span>
           </span>
           <div>
-            <h3 class="mb-3">Post-Acquisition Optimization</h3>
-            <p>After an acquisition, we help you integrate and optimize the acquired technology assets. Our services include system integration, cost optimization, and operational efficiency improvements, ensuring a smooth transition and maximizing your return on investment.</p>
+            <h3 class="mb-3">RAG Chatbot Quickstart</h3>
+            <p>Ship a production-ready RAG chatbot on your own data and cloud in 2 weeks. We deliver a working system with observability, cost controls, and re-ingestion runbooks—not just a prototype.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-29191 d-flex">
+          <span class="wrap-icon mb-4 d-block">
+            <span class="et-toolbox"></span>
+          </span>
+          <div>
+            <h3 class="mb-3">SOC 2 Readiness Assessment</h3>
+            <p>Get a clear technical gap analysis and implementation roadmap for SOC 2 in 2-3 weeks. We look deep into your infrastructure and controls to prepare you for enterprise deals or fundraising.</p>
           </div>
         </div>
       </div>
