--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Services
-description: Explore the range of Fractional CTO and Technical Due Diligence services offered by TechSight.
+description: Explore our AI Readiness, RAG Chatbot, and SOC 2 Readiness services.
 ---
 
 <div class="site-section-cover">
@@ -9,7 +9,7 @@ description: Explore the range of Fractional CTO and Technical Due Diligence ser
     <div class="row align-items-center text-left justify-content-center">
       <div class="col-lg-7 mr-auto">
         <h1 class="text-black mb-4">Our Services</h1>
-        <p class="lead text-muted">We provide deep technical due diligence and strategic consulting for B2B SaaS companies.</p>
+        <p class="lead text-muted">We provide technical assessments and implementation services to help you ship AI features and achieve security compliance.</p>
       </div>
     </div>
   </div>
@@ -28,22 +28,11 @@ description: Explore the range of Fractional CTO and Technical Due Diligence ser
       <div class="col-md-4 mb-5">
         <div class="service-29191 d-flex">
           <span class="wrap-icon mb-4 d-block">
-            <span class="et-toolbox"></span>
-          </span>
-          <div>
-            <h3 class="mb-3">M&A Technical Due Diligence</h3>
-            <p>Comprehensive technical due diligence for mergers and acquisitions.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-5">
-        <div class="service-29191 d-flex">
-          <span class="wrap-icon mb-4 d-block">
             <span class="et-genius"></span>
           </span>
           <div>
-            <h3 class="mb-3">Software Consulting</h3>
-            <p>Optimizing software development processes and architecture.</p>
+            <h3 class="mb-3">AI Readiness Assessment</h3>
+            <p>Technical due diligence for AI. Assess data, infra, and use cases to build a prioritized roadmap.</p>
           </div>
         </div>
       </div>
@@ -53,8 +42,19 @@ description: Explore the range of Fractional CTO and Technical Due Diligence ser
             <span class="et-chat"></span>
           </span>
           <div>
-            <h3 class="mb-3">Post-Acquisition Optimization</h3>
-            <p>Integrating and optimizing acquired technology assets.</p>
+            <h3 class="mb-3">RAG Chatbot Quickstart</h3>
+            <p>Ship a production-ready RAG chatbot in 2 weeks—on your data, in your cloud.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="service-29191 d-flex">
+          <span class="wrap-icon mb-4 d-block">
+            <span class="et-toolbox"></span>
+          </span>
+          <div>
+            <h3 class="mb-3">SOC 2 Readiness Assessment</h3>
+            <p>Technical gap analysis, risk register, and implementation roadmap in 2–3 weeks.</p>
           </div>
         </div>
       </div>
